[package]
name = "ng-wiki"
version = "0.1.0"
authors = ["Noogen Team <info.noogen@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/noogen-projects/ng-wiki"
description = "A Rust library that implements a basic wiki functionality"
keywords = ["noogen", "wiki", "library"]

[dependencies]
